# fractal-byte

./: .env.example  .gitignore  CHECKLIST_RELEASE.md  Cargo.toml  DECISIONS.md  Dockerfile  Makefile  OPENAPI.md  README.md  ROADMAP.md  cliff.toml
.github/workflows/: ci.yml  release.yml
attestations/: README.md  example_attestation.json
config/: seed_tokens.json
crates/rb_vm/src/: canon.rs  exec.rs  lib.rs  opcode.rs  tlv.rs
crates/rb_vm/tests/: laws.rs
crates/ubl/: Cargo.toml
crates/ubl/src/: main.rs
crates/ubl_adapter/: Cargo.toml
crates/ubl_adapter/src/: cid.rs  error.rs  http.rs  lib.rs  types.rs
crates/ubl_ai_nrf1/: Cargo.toml
crates/ubl_ai_nrf1/src/: lib.rs  nrf.rs
crates/ubl_config/src/: lib.rs
crates/ubl_did/src/: lib.rs
crates/ubl_ledger/: Cargo.toml
crates/ubl_ledger/src/: lib.rs
crates/ubl_receipt/: Cargo.toml
crates/ubl_receipt/src/: lib.rs
crates/ubl_runtime/: Cargo.toml
crates/ubl_runtime/src/: bind.rs  canon.rs  cid.rs  engine.rs  error.rs  jws.rs  lib.rs  nrf_canon.rs  policy.rs  rb_bridge.rs  receipt.rs  transition.rs
crates/ublx/: Cargo.toml
crates/ublx/src/: commands.rs  main.rs
docs/: ARCHITECTURE.md  AUDIT_RUNBOOK.md  BATTLE_REPORT.md  BLUEPRINT.md  CHANGELOG-addendum.md  ChatGPT-Feedback sobre o Rho.md  GLOSSARY.md  GOVERNANCE.md  LAWS.md  MERGE_NOTES.md  MTLS_RUNBOOK.md  ONBOARDING.md  OPENAPI.md  RECEIPT_JSON_FORMAT.md  RECEIPT_UI.md  RUNTIME_BLUEPRINT.md  SECURITY.md  TENANCY.md  WASM_ADAPTERS.md  WHAT_WE_ARE.md  WHY_WE_TRUST.md  runtime-ghost-write-ahead.md  ubl-gate.md  ubl-runtime — Blueprint.md
docs/spec/: RB_VM_DECISIONS.md  RB_VM_LAWS.md
events/: README.md  example_release.json
examples/: receipt.json
infra/: .env.infra.example  cloudflared.yml  deploy-watcher.sh  ecosystem.config.js  setup.sh
infra/webhook/: server.js
rb_vm_pr_pack/: issues_backlog.json  issues_backlog.md
rb_vm_pr_pack/PR01-spec-decisions-laws/: PR.md
rb_vm_pr_pack/PR02-core-rb-vm/: PR.md
rb_vm_pr_pack/PR03-canon-cas-sign/: PR.md
rb_vm_pr_pack/PR04-canon-nrf-integration/: PR.md
rb_vm_pr_pack/PR05-bridge-runtime/: PR.md
rb_vm_pr_pack/PR06-gate-api/: PR.md
rb_vm_pr_pack/PR07-laws-tests-goldens/: PR.md
rb_vm_pr_pack/PR08-tracer-narrator-obs/: PR.md
rb_vm_rust_skeleton 3/: Cargo.toml
rb_vm_rust_skeleton 3/crates/rb_vm_runner/: Cargo.toml
rb_vm_rust_skeleton 3/docs/: README.md
rb_vm_rust_skeleton 3/examples/: main.rs
rb_vm_rust_skeleton 4/: Cargo.toml
rb_vm_rust_skeleton 4/bridge_snippets/ubl_gate/: post_execute.rs
rb_vm_rust_skeleton 4/bridge_snippets/ubl_runtime/: execute_rb.rs
rb_vm_rust_skeleton 4/crates/rb_vm/: Cargo.toml
rb_vm_rust_skeleton 4/crates/rb_vm_disasm/: Cargo.toml
schemas/: attestation.schema.json  event.schema.json  receipt.schema.json  transition.schema.json
scripts/: battle.sh  certs-dev.sh  check-cids.sh  e2e.sh  rb_disasm.py  smoke.sh
sdks/py/: README.md  pyproject.toml
sdks/py/tests/: test_client.py
sdks/py/ubl_sdk/: __init__.py  client.py  errors.py  types.py
sdks/ts/: README.md  package-lock.json  package.json
sdks/ts/src/: index.ts  test.ts
services/ubl_gate/: Cargo.toml
services/ubl_gate/src/: api.rs  audit.rs  error.rs  idempotency.rs  keyring_store.rs  lib.rs  main.rs  scope.rs
services/ubl_gate/tests/: hardened.rs  race_card.rs
ubl-runtime-merged-20260213T125630Z/: Cargo.toml  Makefile  README.md
ubl-runtime-merged-20260213T125630Z/crates/ubl_tdln/: Cargo.toml
ubl-runtime-merged-20260213T125630Z/docs/: BLUEPRINT.md  example.manifest.json
ubl-runtime-merged-20260213T125630Z/examples/: wa.json  wf.json
ubl-runtime-merged-20260213T125630Z/services/ubl_tdln_svc/: Cargo.toml
ui/: README.md  index.html  package-lock.json  package.json  vite.config.ts
ui/src/: App.tsx  api.ts  index.css  types.ts
ui/src/components/: ReceiptCard.tsx  ReceiptChain.tsx
vectors/: README.md
(+17 files in other folders)
