
[package]
name = "ubl_ai_nrf1"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
serde_json = "1"
unicode-normalization = "0.1"
leb128 = "0.2"
cid = { version = "0.11", features = ["serde-codec", "std"] }
multihash-codetable = { version = "0.1", features = ["sha2", "digest"] }
hex = "0.4"

[dev-dependencies]
hex-literal = "0.4"
