[package]
name = "ubl_ledger"
version = "0.1.0"
edition = "2021"

[features]
default = []
s3 = ["aws-sdk-s3", "aws-config"]

[dependencies]
anyhow = "1"
tokio = { version = "1", features = ["full"] }
cid = { version = "0.11", features = ["serde-codec", "std"] }
aws-sdk-s3 = { version = "1", optional = true }
aws-config = { version = "1", optional = true }
