[package]
name = "ublx"
version = "0.1.0"
edition = "2021"
description = "UBL public CLI — execute pipelines, inspect receipts, verify CIDs"

[[bin]]
name = "ublx"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "blocking"] }
blake3 = "1"
hex = "0.4"
colored = "2"
